# ai-strategy

./: .gitignore  README.md  RandomForestStrategyBacktest(price_pct_threshold=0.024783739559276756,minutes_stop=245,take_profit_pct=0.015,stop_loss_pct=-0.0125).html  main.py  pyproject.toml
.agent/rules/: agent.md
scripts/: download_data.py  ensemble.py  indicators_smc.py  lightgbm_classifier.py  mlm_framework.py  prophet_test.py  test_ohlcv_stream.py  verify_parquet.py
src/ai_strategy/backtesting/: __init__.py  backtest_mean_reversion.py  backtest_random_forest.py
src/ai_strategy/data/: __init__.py  preprocessing.py
src/ai_strategy/data/fetchers/: base.py  ccxt_fetcher.py
src/ai_strategy/data/streams/: ccxt_streamer.py  streamer_base.py
src/ai_strategy/models/: __init__.py  base.py  candle.py  signal.py  ticker.py  webhook.py
src/ai_strategy/models/mlm/: random_forest_model.py
src/ai_strategy/models/sklearn/: __init__.py  lightgbm_model.py  random_forest_model.py  xgboost_model.py
src/ai_strategy/strategies/: README.md  __init__.py  base.py  cointegrated_pairs.py  lightgbm_strategy.py  mean_reversion_dca.py  random_forest_strategy.py
tests/test_data/: test_ccxt_fetcher.py  test_ccxt_streamer.py
