[project]
name = "ai-strategy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ccxt>=4.5.32",
    "httpx>=0.28.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.3.251219",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.5",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
