[project]
name = "ai-strategy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "backtesting>=0.6.5",
    "ccxt>=4.5.32",
    "httpx>=0.28.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "prophet>=1.3.0",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.5",
    "sambo>=1.25.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "smartmoneyconcepts>=0.0.24",
    "ta>=0.11.0",
]

[dependency-groups]
dev = [
    "pandas-stubs>=2.3.3.251219",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
